--- a/18. Decorators in Python.ipynb
+++ b/18. Decorators in Python.ipynb
@@ -321,8 +321,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "823591f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.859874482048838"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def addition(num):\n",
+    "    return num+math.pi\n",
+    "\n",
+    "def called_function(func):\n",
+    "    added_number=math.e\n",
+    "    return func(added_number)\n",
+    "called_function(addition)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08781dee",
+   "metadata": {},
+   "source": [
+    "#  Functions reverting other functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "47518a2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python is a programming language.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def msg_func():\n",
+    "    def text():\n",
+    "        return 'Python is a programming language.'\n",
+    "    return text\n",
+    "msg = msg_func()\n",
+    "print(msg())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8f8917c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.859874482048838\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a decorating function\n",
+    "\"\"\"\n",
+    "In the following example, the function outer_addition that is some extra function is decorated.\n",
+    "\"\"\"\n",
+    "def addition(a,b):\n",
+    "    print(a+b)\n",
+    "def outer_addition(func):\n",
+    "    def inner(a,b):\n",
+    "        if a<b:\n",
+    "            a,b=b,a\n",
+    "        return func(a,b)\n",
+    "    return inner\n",
+    "result=outer_addition(addition)\n",
+    "result(math.pi,math.e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "06788d97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PYTHON IS THE MOST POPULAR PROGRMMING LANGUAGE.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def decorator_text_uppercase(func):\n",
+    "    def wrapper():\n",
+    "        function = func()\n",
+    "        text_uppercase=function.upper()\n",
+    "        return text_uppercase\n",
+    "    return wrapper\n",
+    "\n",
+    "#def text():\n",
+    "    #return 'Python is the most popular programming language.'\n",
+    "\n",
+    "@decorator_text_uppercase\n",
+    "def text():\n",
+    "    return 'Python is the most popular progrmming language.'\n",
+    "\n",
+    "print(text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "15caa2dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PYTHON IS AN EASY TO LEARN, POWERFUL PROGRAMMING LANGUAGE. IT HAS EFFICIENT HIGH-LEVEL DATA STRUCTURES AND A SIMPLE BUT EFFECTIVE APPROACH TO OBJECT-ORIENTED PROGRAMMING. PYTHON’S ELEGANT SYNTAX AND DYNAMIC TYPING, TOGETHER WITH ITS INTERPRETED NATURE, MAKE IT AN IDEAL LANGUAGE FOR SCRIPTING AND RAPID APPLICATION DEVELOPMENT IN MANY AREAS ON MOST PLATFORMS.\n"
+     ]
+    }
+   ],
+   "source": [
+    "@decorator_text_uppercase\n",
+    "def x():\n",
+    "    return 'Python is an easy to learn, powerful programming language. It has efficient high-level data structures and a simple but effective approach to object-oriented programming. Python’s elegant syntax and dynamic typing, together with its interpreted nature, make it an ideal language for scripting and rapid application development in many areas on most platforms.'\n",
+    "print(x())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e63dc3a",
    "metadata": {},
    "outputs": [],
    "source": []
