--- a/17. Math Module Functions in Python.ipynb
+++ b/17. Math Module Functions in Python.ipynb
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "07bc99d6",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "2274a07e",
    "metadata": {},
    "outputs": [
@@ -631,13 +631,13 @@
      "output_type": "stream",
      "text": [
       "The copysign of these two numbers -3.14 and 2.718 is 3.14\n",
-      "The copysign of these two numbers 1729 and 0.577 is -1729.0\n"
+      "The copysign of these two numbers 1729 and -0.577 is -1729.0\n"
      ]
     }
    ],
    "source": [
     "print(f'The copysign of these two numbers -3.14 and 2.718 is {math.copysign (-3.14,2.718)}')\n",
-    "print(f'The copysign of these two numbers 1729 and 0.577 is {math.copysign( 1729,-0.577)}')"
+    "print(f'The copysign of these two numbers 1729 and -0.577 is {math.copysign( 1729,-0.50000000)}')"
    ]
   },
   {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "1f0c19ce",
    "metadata": {},
    "outputs": [
@@ -698,13 +698,13 @@
      "output_type": "stream",
      "text": [
       "The factorial of number 6 is:720\n",
-      "The factorial of the number 3 is: 24\n"
+      "The factorial of the number 4 is: 24\n"
      ]
     }
    ],
    "source": [
     "print(f'The factorial of number 6 is:{math.factorial(6)}')\n",
-    "print(f'The factorial of the number 3 is: {math.factorial(4)}')"
+    "print(f'The factorial of the number 4 is: {math.factorial(4)}')"
    ]
   },
   {
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "b9345012",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
     }
    ],
    "source": [
-    "print(math.floor(3.50))"
+    "print(math.floor(3.60))"
    ]
   },
   {
@@ -830,8 +830,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "562df32c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "144"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "12**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f83d3434",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "144"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "12*12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a070575",
    "metadata": {},
    "outputs": [],
    "source": []
