--- a/18. Decorators in Python.ipynb
+++ b/18. Decorators in Python.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "8147f328",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "\"\\nAbove code is equal to-\\ndef hi_decorator():\\n    print('Hello')\\nhi_decorator=hello_decorator(hi_decorator)\\n\\n\""
       ]
      },
-     "execution_count": 1,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "ac082820",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "04765f70",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "id": "f6d4819f",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "id": "95dcede0",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "9.8596"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "id": "a0a76b44",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "id": "8ae9cbae",
    "metadata": {},
    "outputs": [
@@ -236,15 +236,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "id": "c9ad0683",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
+     "ename": "NameError",
+     "evalue": "name 'exponent' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_23316\\4077125841.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;31m#output = exponent(num)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mexponent\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mexponent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'exponent' is not defined"
      ]
     }
    ],
@@ -262,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "id": "78848cd9",
    "metadata": {},
    "outputs": [
@@ -287,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "id": "3d4c3a58",
    "metadata": {},
    "outputs": [
@@ -321,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "id": "823591f4",
    "metadata": {},
    "outputs": [
@@ -331,7 +335,7 @@
        "5.859874482048838"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "id": "47518a2e",
    "metadata": {},
    "outputs": [
@@ -379,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "id": "8f8917c8",
    "metadata": {},
    "outputs": [
@@ -410,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "id": "06788d97",
    "metadata": {},
    "outputs": [
@@ -442,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "id": "15caa2dd",
    "metadata": {},
    "outputs": [
@@ -462,9 +466,208 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d8adcdf",
+   "metadata": {},
+   "source": [
+    "# Fancy decorators\n",
+    "\n",
+    " * @propertymethod\n",
+    " * @staticmethod\n",
+    " * @classmethod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "21471f7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Person name: Divya\n",
+      "Person age:25 \n",
+      "Person contact:  78526889\n",
+      "Message:Divya is a Beautiful girl and age is:25 Her contact no is: 78526889\n"
+     ]
+    }
+   ],
+   "source": [
+    "class person:\n",
+    "    def __init__(self,name,age,contact):\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "        self.contact=contact\n",
+    "    @property\n",
+    "    def show(self):\n",
+    "        return self.name+' is a Beautiful girl and age is:'+self.age+''+ 'Her contact no is:'+self.contact\n",
+    "    \n",
+    "man=person('Divya','25 ',' 78526889')\n",
+    "print(f'Person name: {man.name}')\n",
+    "print(f'Person age:{man.age}')\n",
+    "print(f'Person contact: {man.contact}')\n",
+    "print(f'Message:{man.show}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "d8d0f98d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Divya is a Beautiful girl and Her age is: 25 Her contact no is: 789456123\n",
+      "Divya is a Beautiful girl and Her age is: 25 Her contact no is: 789456123\n"
+     ]
+    }
+   ],
+   "source": [
+    "class person:\n",
+    "    @staticmethod\n",
+    "    def name():\n",
+    "        print('Divya is a Beautiful girl and Her age is: 25 Her contact no is: 789456123')\n",
+    "        \n",
+    "man = person()\n",
+    "man.name()\n",
+    "person.name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "af1a35dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'parent' object has no attribute 'produdct'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_23316\\2668635979.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mparty\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mparent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'The Man {party.name} is member of {party.produdct} is very Sucessful CM.'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'parent' object has no attribute 'produdct'"
+     ]
+    }
+   ],
+   "source": [
+    "class parent:\n",
+    "    def __init__(self,name,product):\n",
+    "        self.name = name\n",
+    "        self.product = product\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def display(cls):\n",
+    "        return cls('Yogi','BJP')\n",
+    "    \n",
+    "party= parent.display()\n",
+    "print(f'The Man {party.name} is member of {party.produdct} is very Sucessful CM.')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "06a44203",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a class method\n",
+      "Class: <class '__main__.MyClass'>\n",
+      "Value: 10\n",
+      "This is a class method\n",
+      "Class: <class '__main__.MyClass'>\n",
+      "Value: 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "    @classmethod\n",
+    "    def class_method(cls, x):\n",
+    "        print(\"This is a class method\")\n",
+    "        print(\"Class:\", cls)\n",
+    "        print(\"Value:\", x)\n",
+    "\n",
+    "\n",
+    "MyClass.class_method(10)\n",
+    "\n",
+    "\n",
+    "obj = MyClass(20)\n",
+    "\n",
+    "\n",
+    "obj.class_method(30)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "5c2d0919",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "e49a28f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'date' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_23316\\2521686438.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtoday\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'date' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "date.today()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "b015a6f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01-06-2023\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "\n",
+    "current_date = date.today()\n",
+    "formatted_date = current_date.strftime(\"%d-%m-%Y\")\n",
+    "print(formatted_date)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e63dc3a",
+   "id": "9f78d37e",
    "metadata": {},
    "outputs": [],
    "source": []
