--- a/18. Decorators in Python.ipynb
+++ b/18. Decorators in Python.ipynb
@@ -665,9 +665,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd6bd89d",
+   "metadata": {},
+   "source": [
+    "# Multiple decorators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5c17a5b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Python', 'is', 'the', 'most', 'popular', 'programming', 'language.']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def splitted_text(text):\n",
+    "    def wrapper():\n",
+    "        function = text()\n",
+    "        text_splitting = function.split()\n",
+    "        return text_splitting\n",
+    "    \n",
+    "    return wrapper\n",
+    "\n",
+    "@splitted_text\n",
+    "#@decorator_text_uppercase\n",
+    "\n",
+    "def text():\n",
+    "    return 'Python is the most popular programming language.'\n",
+    "\n",
+    "text()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f78d37e",
+   "id": "711fd6a8",
    "metadata": {},
    "outputs": [],
    "source": []
