--- a/19. Generators in Python.ipynb
+++ b/19. Generators in Python.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "648b1834",
+   "id": "cfa08b5b",
    "metadata": {},
    "source": [
-    "# 21. Generators in Python\n",
+    "# 19. Generators in Python\n",
     "\n",
     "  * Python generators are the functions that return the transversal object and a simple way of creating iterators.\n",
     "  * It transverses the entire items at once.\n",
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a8e34e7d",
+   "id": "5f7c9b9e",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0168ff30",
+   "id": "a3c018b1",
    "metadata": {},
    "outputs": [
     {
@@ -77,8 +77,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "31453bec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello,World!\n",
+      "Hi, Python!\n",
+      "Python is the most popular programming language.\n",
+      "Momos is your favouriate fastfood\n"
+     ]
+    }
+   ],
+   "source": [
+    "def message():\n",
+    "    msg_one='Hello,World!'\n",
+    "    yield msg_one\n",
+    "    \n",
+    "    \n",
+    "    msg_two = 'Hi, Python!'\n",
+    "    yield msg_two\n",
+    "    \n",
+    "    msg_three = 'Python is the most popular programming language.'\n",
+    "    yield msg_three\n",
+    "    \n",
+    "    msg_fourth = 'Momos is your favouriate fastfood'\n",
+    "    yield msg_fourth\n",
+    "    \n",
+    "    \n",
+    "result = message()\n",
+    "print(next(result))\n",
+    "print(next(result))\n",
+    "print(next(result))\n",
+    "print(next(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7f716a41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    },
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_50672\\1792718255.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgen\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgen\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgen\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "def generator(a):\n",
+    "    for i in range(a):\n",
+    "        yield i\n",
+    "        \n",
+    "\n",
+    "gen = generator(7)\n",
+    "print(next(gen))\n",
+    "print(next(gen))\n",
+    "print(next(gen))\n",
+    "print(next(gen))\n",
+    "print(next(gen))\n",
+    "print(next(gen))\n",
+    "print(next(gen))\n",
+    "print(next(gen))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f37ad25c",
+   "id": "8fcf104f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2422c10d",
    "metadata": {},
    "outputs": [],
    "source": []
