--- a/20. DataBase.ipynb
+++ b/20. DataBase.ipynb
@@ -196,9 +196,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d46cfca5",
+   "metadata": {},
+   "source": [
+    "# 2. Basic SQL Syntax\n",
+    "\n",
+    "\n",
+    "* Let's look at the fundamental __SQL Commands:__ SELECT, FROM, WHERE, GROUPBY, HAVING, and ORDER BY."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56427ce4",
+   "metadata": {},
+   "source": [
+    "# 2.1 SELECT and FROM\n",
+    "\n",
+    "\n",
+    " * The __SELECT__ statement is used to select data from a databse, and the __FROM__ statement specifies which table to get the data from.\n",
+    " \n",
+    " \n",
+    " __Query syntax__\n",
+    " \n",
+    " __SELECT__ FirstName,LastName\n",
+    " \n",
+    " __FROM__ Employees;\n",
+    " \n",
+    " \n",
+    " * This query retrieves all first and last names from the __Employees__ table.\n",
+    " * If you want to select all columns, use * symbol:\n",
+    " \n",
+    " \n",
+    " __SELECT * FROM__ Empoloyees;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a52b0ff6",
+   "metadata": {},
+   "source": [
+    "# 2.2 WHERE\n",
+    "\n",
+    "\n",
+    " * The __WHERE__ clause is used to filter records:\n",
+    " \n",
+    " __Query Syntax__\n",
+    " \n",
+    " __SELECT *__\n",
+    " \n",
+    " __FROM__ \"Employees\"\n",
+    " \n",
+    " __WHERE Position__ = 'Analyst'; \n",
+    " \n",
+    " \n",
+    " * This query retrieves all data from employees who are analysts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08782e32",
+   "metadata": {},
+   "source": [
+    "# GROUPBY and HAVING\n",
+    "\n",
+    " * __GROUP BY__ groups rows that have the same values in specified columns into aggregated data. __HAVING__ is used instead of __WHERE__ with aggregated data.\n",
+    " \n",
+    " \n",
+    " \n",
+    " __Query Syntax__\n",
+    " \n",
+    " __SELECT \"Position\", COUNT(*)__\n",
+    " \n",
+    " FROM \"Employees\"\n",
+    " \n",
+    " GROUP BY \"Position\"\n",
+    " \n",
+    " HAVING COUNT(*) >1;\n",
+    " \n",
+    " \n",
+    " * This query shows postions held by more than one employee.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71990706",
+   "id": "7bccc3ad",
    "metadata": {},
    "outputs": [],
    "source": []
