--- a/20. DataBase.ipynb
+++ b/20. DataBase.ipynb
@@ -279,12 +279,208 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7bccc3ad",
+   "cell_type": "markdown",
+   "id": "de054458",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# SELECT and FROM\n",
+    "\n",
+    "__/* The Select statement is used to SELECT data from a database, and the FROM statement specifies which table to get the data from.*/__\n",
+    "\n",
+    "\n",
+    "__SELECT \"FirstName\",\"LastName\"__\n",
+    "\n",
+    "__FROM Person;__\n",
+    "\n",
+    "\n",
+    "__NOTE: This query retrieves all the first and last names from the Person table. If you  want ot select all columns, use the * symbol:__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4a0a12e",
+   "metadata": {},
+   "source": [
+    "# WHERE\n",
+    "\n",
+    " __The WHERE clause is used to filter the records;__\n",
+    " \n",
+    " \n",
+    "__SELECT * FROM Person__\n",
+    "__WHERE \"Position\"=\"Python Developer ;\"\n",
+    "\n",
+    "\n",
+    "__NOTE: This query retrieves all data for person who are Python Developer.__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e31b3240",
+   "metadata": {},
+   "source": [
+    "# GROUP BY and HAVING \n",
+    "\n",
+    "\n",
+    "__GROUP BY groups rows that have the same values in specified column into aggregated data. HAVING is used instead of WHERE with aggregated data.__\n",
+    "\n",
+    "\n",
+    "__SELECT \"Position\", COUNT(*)__\n",
+    "\n",
+    "__FROM Person__\n",
+    "\n",
+    "__GROUP BY 'Position'__\n",
+    "\n",
+    "__HAVING COUNT(*)>1;__\n",
+    "\n",
+    "__NOTE:- This query shows positions held by more than one employee.__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c30fe1b5",
+   "metadata": {},
+   "source": [
+    "# ORDER BY\n",
+    "\n",
+    " __ORDER BY is used to sort the data in ascending or descending order:__\n",
+    " \n",
+    " __syntax__\n",
+    " \n",
+    " __SELECT * FROM person__\n",
+    " \n",
+    " __ORDER BY \"lastname\" ASC;__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4c76484",
+   "metadata": {},
+   "source": [
+    "#  Querying Data\n",
+    "\n",
+    " __The SELECT statement is not just for selecting simple rows. We Can use it to perform calculation, concatenations, and more.\n",
+    " \n",
+    " \n",
+    " __Syntax__\n",
+    " \n",
+    " __SELECT \"Firstname\" || ' ' || \"Lastname\" as \"FullName\", \"Position\"__\n",
+    " \n",
+    " __FROM person;__\n",
+    " \n",
+    " \n",
+    " __\"Note\":- This query concatenates the first name and last name, spearated by a space and displays it as FullName.__\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4016deb5",
+   "metadata": {},
+   "source": [
+    "# Filtering and Sorting Data\n",
+    "\n",
+    " __Apart from WHERE and ORDER BY, SQL offers BETWEEN, LIKE, and IN to a filter data.__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "776185ae",
+   "metadata": {},
+   "source": [
+    "# BETWEEN\n",
+    "\n",
+    " __BETWEEN is used to filter by a range:__\n",
+    " \n",
+    " __syntax:__\n",
+    " \n",
+    " __SELECT * FROM \"EmployeeID\"__\n",
+    " \n",
+    " __WHERE \"EmployeeID\" BETWEEN '5' AND '10' ;__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9228967e",
+   "metadata": {},
+   "source": [
+    "# LIKE and ILIKE\n",
+    "\n",
+    " __LIKE is used in a WHERE clause to search for a specified pattern in a column. The \"%\" sign is used to define wildcards (missing letters) both before and after the pattern. Also, note that LIKE is case sensitive. ILIKE can be used for Case-insensitive search.__\n",
+    " \n",
+    " \n",
+    " __Syntax__\n",
+    " \n",
+    " __SELECT * FROM Person__\n",
+    " \n",
+    " __WHERE \"FirstName LIKE 'J%';__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "497d0cb4",
+   "metadata": {},
+   "source": [
+    "# IN\n",
+    "\n",
+    " __IN allow you to specify multiple values in a Where Clause__\n",
+    " \n",
+    " \n",
+    " __Syntax of IN__\n",
+    " \n",
+    " \n",
+    " __SELECT * FROM person__\n",
+    " \n",
+    " __WHERE \"position\" IN('Analysts','Engineer')__\n",
+    " \n",
+    " \n",
+    " __This query selects all analysts and engineer.__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53923191",
+   "metadata": {},
+   "source": [
+    "# Joining Tables.\n",
+    "\n",
+    "\n",
+    " __JOIN statements are used to combine rows from two or more tables based on a related column. The different types of joins include INNER JOIN, LEFT (OUTER) JOIN, and FULL JOIN.\n",
+    " \n",
+    " \n",
+    " __Syntax of INNER JOIN.__\n",
+    " \n",
+    " * __SELECT Employee.LastName, Employees.FirstName, Departements.DepartmentName__\n",
+    " * __FROM Employees__\n",
+    " * __INNER JOIN Departments ON Employee.DepartmentID=Departments.DepartmentID;__\n",
+    " \n",
+    " __NOTE:- THIS QUERY RETRIEVES THE LIST OF EMPLOYEEES ALONG WITH THEIR RESPECTIVE DEPARTMENT NAMES.__\n",
+    " \n",
+    " \n",
+    " __Syntax of LEFT (OUTER) JOIN.__\n",
+    " \n",
+    " * __SELECT Employee.LastName, Employee.FirstName, Departments.DepartmentName__\n",
+    " * __FROM Employees__\n",
+    " * __LEFT JOIN Departments ON Employees.DepartmentID=Departments.DepartmentID;__\n",
+    " \n",
+    " __NOTES:- THIS QUERY RETRIEVES EMPLOYEES AND THEIR DEPARTMENTS, INCLUDING EMPLOYEES WITH NO DEPARTMENT (THE DEPARTMENTNAME FOR THEM WILL BE NULL)__\n",
+    " \n",
+    " __Syntax of RIGHT(OUTER) JOIN.__\n",
+    " \n",
+    " * __SELECT Employee.LastName, Employee.FirstName, Departments.DepartmentName__\n",
+    " * __FROM Employees__\n",
+    " * __RIGHT JOIN Departments ON Employees.DepartmentID=Departments.DepartmentID;__\n",
+    " \n",
+    " __NOTES:- THIS QUERY RETRIEVES ALL DEPARTMENTS AND THEIR EMPLOYEES, INCLUDING DEPARTMENTS WITH NO EMPOLOYEES.__\n",
+    " \n",
+    " \n",
+    " __Syntax of FULL(OUTER)JOIN.__\n",
+    " \n",
+    " * __SELECT Employee.LastName, Employee.FirstName, Departments.DepartmentName__\n",
+    " * __FROM Employees__\n",
+    " * __FULL JOIN Departments ON Employees.DepartmentID=Departments.DepartmentID;__\n",
+    " \n",
+    " __NOTES:- THIS QUERY RETRIEVES ALL COMBINATIONS OF EMPLOYEES AND DEPARTMENTS, INCLUDING EMPLOYEES WITH NO DEPARTMENT AND DEPARTMENTS WITH NO EMPLOYEES.__"
+   ]
   }
  ],
  "metadata": {
