--- a/20. DataBase.ipynb
+++ b/20. DataBase.ipynb
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "497d0cb4",
+   "id": "f92aa3dd",
    "metadata": {},
    "source": [
     "# IN\n",
@@ -438,13 +438,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53923191",
+   "id": "bc5839d0",
    "metadata": {},
    "source": [
     "# Joining Tables.\n",
     "\n",
     "\n",
-    " __JOIN statements are used to combine rows from two or more tables based on a related column. The different types of joins include INNER JOIN, LEFT (OUTER) JOIN, and FULL JOIN.\n",
+    " __JOIN statements are used to combine rows from two or more tables based on a related column. The different types of joins include INNER JOIN, LEFT (OUTER) JOIN, and FULL JOIN.__\n",
     " \n",
     " \n",
     " __Syntax of INNER JOIN.__\n",
@@ -480,6 +480,78 @@
     " * __FULL JOIN Departments ON Employees.DepartmentID=Departments.DepartmentID;__\n",
     " \n",
     " __NOTES:- THIS QUERY RETRIEVES ALL COMBINATIONS OF EMPLOYEES AND DEPARTMENTS, INCLUDING EMPLOYEES WITH NO DEPARTMENT AND DEPARTMENTS WITH NO EMPLOYEES.__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "961f56aa",
+   "metadata": {},
+   "source": [
+    "#  Modifying Database Information\n",
+    "\n",
+    " __SQL allows you to insert, update, and delete data with INSERT, UPDATE and DELETE commands respectively. Be careful when using these commands as you can change your data permanently.__\n",
+    " \n",
+    " \n",
+    " * __1. INSERT__\n",
+    " \n",
+    " * __INSERT INTO person (EmployeeID, FirstName, LastName, Position)__\n",
+    " * __VALUES (4,'Mark','Anderson','Analyst');__\n",
+    " \n",
+    " \n",
+    " * __2. UPDATE__\n",
+    " * __UPDATE person__\n",
+    " * __SET \"Position\"='Senior Developer'__\n",
+    " * __WHERE \"EmployeeID\"=4;__\n",
+    " \n",
+    " * __3. DELETE__\n",
+    " * __DELETE FROM person__\n",
+    " * __WHERE \"EmployeeID\"=6;__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c403c4c8",
+   "metadata": {},
+   "source": [
+    "# Advanced SQL Techniques\n",
+    "\n",
+    " __Let's solve into more complex technique with the help of examples.__\n",
+    " \n",
+    "# Handling NULL values.\n",
+    "\n",
+    " __Null value in SQL means no or zero value. Here's how you can use IS NULL and IS NOT NULL:__\n",
+    " \n",
+    " * __SELECT *__\n",
+    " * __FROM Person__\n",
+    " * __WHERE \"Position\" IS NULL;__\n",
+    " \n",
+    " __This query selects all persons who don't belong to any department.__\n",
+    " \n",
+    " \n",
+    " * __SELECT *__\n",
+    " * __FROM Person__\n",
+    " * __WHERE \"Position\" IS NOT NULL;__\n",
+    " \n",
+    " __This query selects all persons who belongs to a position.__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16b29b5a",
+   "metadata": {},
+   "source": [
+    "# String Functions\n",
+    "\n",
+    " __SQL offers several functions to manipulates strings, some examples includes:__\n",
+    " \n",
+    "  * __CONCAT():- Concatenates two or more strins.__\n",
+    "  * __TRIM():- Removes leading and trailing spaces of a string.__\n",
+    "  * __LENGTH():- Returns the length of a string.__\n",
+    "  \n",
+    "  \n",
+    "  __SELECET CONCAT (\"FirstName,\" \",\"LastName\") as \"FullName\", TRIM(\"Position\"),\n",
+    "  __LENGTH (\"FirstName\") as NameLength__\n",
+    "  __FROM person;__"
    ]
   }
  ],
